<resources>
    <string name="app_name">Subtitle Downloader</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">home</string>

    <string name="button_search">Search</string>

    <string name="fa_folder_open">&#xf07c;</string>
    <string name="fa_film">&#xf008;</string>
    <string name="fa_file_alt">&#xf15c;</string>
    <string name="fa_hourglass">&#xf254;</string>
    <!--string name="fa_wrench">&#xf0ad;</string-->

    <string name="msg_download_sub">Download complete</string>

    <string name="err_settings">Settings not established</string>
    <string name="err_list_dir">Error listing directory</string>
    <string name="err_search_sub">Error searching data</string>
    <string name="err_download_sub">Download error</string>

    <string name="pref_cat_connection">Connection options</string>
    <string name="pref_cat_other">Other</string>

    <string name="pref_tit_ip">Server IP</string>
    <string name="pref_sum_ip">Enter Server IP</string>
    <string name="pref_tit_domain">Domain</string>
    <string name="pref_sum_domain">Enter Domain</string>
    <string name="pref_tit_username">Username</string>
    <string name="pref_sum_username">Enter Username</string>
    <string name="pref_tit_password">Password</string>
    <string name="pref_sum_password">Enter Password</string>
    <string name="pref_tit_folder">Series Folder</string>
    <string name="pref_sum_folder">Enter Your Series Folder</string>
</resources>